[tool.poetry]
name = "vasagent"
version = "0.1.0"
description = "A basic Poetry environment for AGENTIC AI projects"
authors = ["Your Name <you@example.com>"]
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "*"
pydantic = "*"
requests = "*"
streamlit = "*"
python-dotenv = "*"
langchain = "*"
langchain-community = "*"
faiss-cpu = "*"
pypdf = "*"
tiktoken = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
